[project]
name = "comfyui-mosaica"
description = "Create colorful mosaic images in ComfyUI by computing label images and applying lookup tables."
version = "1.0.3"
license = "LICENSE"
dependencies = ["matplotlib", "scikit-learn"]

[project.urls]
Repository = "https://github.com/Mason-McGough/ComfyUI-Mosaica"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "masonmcgough"
DisplayName = "ComfyUI-Mosaica"
Icon = "https://github.com/Mason-McGough/ComfyUI-Mosaica/blob/main/docs/mason-mcgough.png?raw=true"
